Fix overflow on teachers page

--- a/apps/website/src/components/teachers/teachers.scss
+++ b/apps/website/src/components/teachers/teachers.scss
@@ -81,6 +81,7 @@
       color: $text-secondary;
       font-size: 1.8rem;
       font-weight: 500;
+      text-wrap: wrap;
     }
   }
 
